[gd_scene load_steps=66 format=2]

[ext_resource path="res://Level/TrueLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level/ResetButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level/Relativity.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Numbs.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Sprites/UI/ChargeBar.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Parallax/1Over.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Parallax.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Parallax/1Under.png" type="Texture" id=8]
[ext_resource path="res://addons/wwise/runtime/nodes/ak_bank.gd" type="Script" id=9]
[ext_resource path="res://addons/wwise/runtime/nodes/ak_event_2d.gd" type="Script" id=10]
[ext_resource path="res://addons/wwise/runtime/nodes/ak_listener.gd" type="Script" id=11]
[ext_resource path="res://addons/wwise/runtime/nodes/ak_event.gd" type="Script" id=12]
[ext_resource path="res://Sprites/UI/ChargeIndicator.png" type="Texture" id=13]
[ext_resource path="res://Sprites/UI/PromptUp.png" type="Texture" id=14]
[ext_resource path="res://Sounds/boost.wav" type="AudioStream" id=15]
[ext_resource path="res://Sprites/UI/x2.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72.5, 512 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 76.5, 512 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 278, 25 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 12, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 24, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 36, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 60, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 72, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 84, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 108, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 120, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 132, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 156, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 168, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 180, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 5 )
region = Rect2( 204, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 5 )
region = Rect2( 216, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 5 )
region = Rect2( 228, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 5 )
region = Rect2( 252, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 5 )
region = Rect2( 264, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 5 )
region = Rect2( 276, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 5 )
region = Rect2( 312, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 5 )
region = Rect2( 324, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 5 )
region = Rect2( 336, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 5 )
region = Rect2( 348, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 5 )
region = Rect2( 360, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 5 )
region = Rect2( 372, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 5 )
region = Rect2( 396, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 5 )
region = Rect2( 408, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 5 )
region = Rect2( 420, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 5 )
region = Rect2( 432, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 5 )
region = Rect2( 444, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 5 )
region = Rect2( 456, 0, 12, 200 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 12, 200 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 28, 28 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 13 )
region = Rect2( 28, 0, 28, 28 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 14 )
region = Rect2( 25, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 25, 25 )

[sub_resource type="SpriteFrames" id=71]
animations = [ {
"frames": [ SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Relativity" type="Node2D"]
z_index = -1
script = ExtResource( 3 )
parallaxBuffer = 300
deathScroll = 10000
level = ExtResource( 1 )
resetButton = ExtResource( 2 )
boostMax = 5000
thresh1 = 15000
thresh2 = 30000
speedMin = 1500

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 288, 450 )
current = true

[node name="Left wall" type="StaticBody2D" parent="Camera" groups=["Walls"]]
position = Vector2( -288, -13 )
__meta__ = {
"_editor_description_": "The player bounces off of it."
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera/Left wall"]
position = Vector2( -62.5, 13 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Camera" groups=["Walls"]]
position = Vector2( 288, -11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera/StaticBody2D"]
position = Vector2( 66.5, 11 )
shape = SubResource( 2 )

[node name="LabelList" type="Node2D" parent="Camera"]
position = Vector2( 0, 365 )
scale = Vector2( 2, 2 )
__meta__ = {
"_editor_description_": "Displays the player's current score at the bottom of the screen during play."
}

[node name="Millions" type="AnimatedSprite" parent="Camera/LabelList"]
position = Vector2( -51, 20 )
frames = ExtResource( 4 )
animation = "Numbers"

[node name="Hundred_Thousands" type="AnimatedSprite" parent="Camera/LabelList"]
position = Vector2( -34, 20 )
frames = ExtResource( 4 )
animation = "Numbers"

[node name="Ten_Thous" type="AnimatedSprite" parent="Camera/LabelList"]
position = Vector2( -17, 20 )
frames = ExtResource( 4 )
animation = "Numbers"

[node name="Thousands" type="AnimatedSprite" parent="Camera/LabelList"]
position = Vector2( 0, 20 )
frames = ExtResource( 4 )
animation = "Numbers"

[node name="Hundreds" type="AnimatedSprite" parent="Camera/LabelList"]
position = Vector2( 17, 20 )
frames = ExtResource( 4 )
animation = "Numbers"

[node name="Tens" type="AnimatedSprite" parent="Camera/LabelList"]
position = Vector2( 34, 20 )
frames = ExtResource( 4 )
animation = "Numbers"

[node name="Ones" type="AnimatedSprite" parent="Camera/LabelList"]
position = Vector2( 51, 20 )
frames = ExtResource( 4 )
animation = "Numbers"

[node name="HighList" type="Node2D" parent="Camera"]
visible = false
position = Vector2( 0, 290 )
scale = Vector2( 2, 2 )
__meta__ = {
"_editor_description_": "Displays the player's high score in between runs"
}

[node name="Millions" type="AnimatedSprite" parent="Camera/HighList"]
position = Vector2( -51, 20 )
frames = ExtResource( 4 )
animation = "WhiteNums"

[node name="Hundred_Thousands" type="AnimatedSprite" parent="Camera/HighList"]
position = Vector2( -34, 20 )
frames = ExtResource( 4 )
animation = "WhiteNums"

[node name="Ten_Thous" type="AnimatedSprite" parent="Camera/HighList"]
position = Vector2( -17, 20 )
frames = ExtResource( 4 )
animation = "WhiteNums"

[node name="Thousands" type="AnimatedSprite" parent="Camera/HighList"]
position = Vector2( 0, 20 )
frames = ExtResource( 4 )
animation = "WhiteNums"

[node name="Hundreds" type="AnimatedSprite" parent="Camera/HighList"]
position = Vector2( 17, 20 )
frames = ExtResource( 4 )
animation = "WhiteNums"

[node name="Tens" type="AnimatedSprite" parent="Camera/HighList"]
position = Vector2( 34, 20 )
frames = ExtResource( 4 )
animation = "WhiteNums"

[node name="Ones" type="AnimatedSprite" parent="Camera/HighList"]
position = Vector2( 51, 20 )
frames = ExtResource( 4 )
animation = "WhiteNums"

[node name="BoundsEnd" type="Area2D" parent="Camera"]
position = Vector2( 0, 500 )
__meta__ = {
"_editor_description_": "Detects the player and triggers OOB(), starting the death sequence."
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera/BoundsEnd"]
shape = SubResource( 15 )

[node name="ChargeMeter" type="AnimatedSprite" parent="Camera"]
position = Vector2( 244, 200 )
scale = Vector2( 2, 2 )
frames = SubResource( 26 )
animation = "New Anim"

[node name="ChargeIndicator" type="AnimatedSprite" parent="Camera"]
position = Vector2( 244, -50 )
scale = Vector2( 2, 2 )
frames = SubResource( 29 )

[node name="Prompt" type="AnimatedSprite" parent="Camera"]
position = Vector2( 244, -112 )
scale = Vector2( 2, 2 )
frames = SubResource( 71 )

[node name="x2" type="Sprite" parent="Camera"]
visible = false
position = Vector2( 102, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )

[node name="Tween" type="Tween" parent="."]

[node name="Starscroll" type="ParallaxBackground" parent="."]

[node name="Stars" type="ParallaxLayer" parent="Starscroll"]
motion_scale = Vector2( 1, 0.5 )
motion_mirroring = Vector2( 0, 1024 )

[node name="Sprite" type="Sprite" parent="Starscroll/Stars"]
position = Vector2( 288, 512 )
texture = ExtResource( 7 )

[node name="MarkUnder" type="ParallaxLayer" parent="Starscroll"]
visible = false
motion_scale = Vector2( 1, 0.82 )
motion_mirroring = Vector2( 0, 900 )

[node name="Sprite" type="Sprite" parent="Starscroll/MarkUnder"]
position = Vector2( 288, 450 )
texture = ExtResource( 8 )

[node name="MarkOver" type="ParallaxLayer" parent="Starscroll"]
visible = false
motion_scale = Vector2( 1, 0.75 )
motion_mirroring = Vector2( 0, 900 )

[node name="Sprite" type="Sprite" parent="Starscroll/MarkOver"]
position = Vector2( 288, 450 )
texture = ExtResource( 6 )

[node name="LevelSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[node name="AkBank" type="Node" parent="."]
script = ExtResource( 9 )
bank = {
"Id": 3427827313,
"Name": "MUSICSOUNDBANK"
}
load_on = 3
unload_on = 2

[node name="AkListener" type="Spatial" parent="."]
script = ExtResource( 11 )

[node name="Events" type="Node" parent="."]

[node name="PlayMusic" type="Node2D" parent="Events"]
script = ExtResource( 10 )
event = {
"Id": 1256202815,
"Name": "PLAY"
}
trigger_on = 3

[node name="Phase1" type="Node2D" parent="Events"]
script = ExtResource( 10 )
event = {
"Id": 4279841335,
"Name": "RESPAWN"
}

[node name="Phase2" type="Spatial" parent="Events"]
script = ExtResource( 12 )
event = {
"Id": 1993696623,
"Name": "SETSTATEPHASE2"
}

[node name="Phase3" type="Spatial" parent="Events"]
script = ExtResource( 12 )
event = {
"Id": 1993696622,
"Name": "SETSTATEPHASE3"
}

[node name="Death" type="Spatial" parent="Events"]
script = ExtResource( 12 )
event = {
"Id": 4158285989,
"Name": "GAMEOVER"
}

[node name="BoostSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="body_entered" from="Camera/BoundsEnd" to="." method="_on_OOB"]
[connection signal="tween_completed" from="Tween" to="." method="_on_tween_over"]
[connection signal="timeout" from="LevelSpawnTimer" to="." method="_on_LevelSpawnTimer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
